--- a/data-science.html
+++ b/data-science.html
@@ -181,7 +181,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -193,11 +193,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://anthem.referrals.selectminds.com/jobs/data-science-sol-consultant-44791'>Data Science Sol Consultant - Anthem, Inc. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://anthem.referrals.selectminds.com/jobs/data-science-sol-consultant-44791'>Data Science Sol Consultant - Anthem, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p>5 days ago ... Data Scientist. The Challenge: Do you want to be a Data Scientist? Are you 
 innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Scientist, Senior. The Challenge: Do you want to be a Data Scientist? -Are 
 you innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
@@ -284,7 +284,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -328,7 +328,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -340,7 +340,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
+<h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -392,7 +392,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -420,7 +420,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -436,7 +436,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
+<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
